; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcbuild.c_fc_rrq_build.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcbuild.c_fc_rrq_build.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fchs_s = type { i32 }
%struct.fc_rrq_s = type { i32, i32, i32 }

@rrq_tmpl = common dso_local global i32 0, align 4
@FC_RXID_ANY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fc_rrq_build(%struct.fchs_s* %0, %struct.fc_rrq_s* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.fchs_s*, align 8
  %8 = alloca %struct.fc_rrq_s*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.fchs_s* %0, %struct.fchs_s** %7, align 8
  store %struct.fc_rrq_s* %1, %struct.fc_rrq_s** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load %struct.fchs_s*, %struct.fchs_s** %7, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @fc_els_req_build(%struct.fchs_s* %13, i32 %14, i32 %15, i32 %16)
  %18 = load %struct.fc_rrq_s*, %struct.fc_rrq_s** %8, align 8
  %19 = call i32 @memcpy(%struct.fc_rrq_s* %18, i32* @rrq_tmpl, i32 12)
  %20 = load i32, i32* %10, align 4
  %21 = load %struct.fc_rrq_s*, %struct.fc_rrq_s** %8, align 8
  %22 = getelementptr inbounds %struct.fc_rrq_s, %struct.fc_rrq_s* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @cpu_to_be16(i32 %23)
  %25 = load %struct.fc_rrq_s*, %struct.fc_rrq_s** %8, align 8
  %26 = getelementptr inbounds %struct.fc_rrq_s, %struct.fc_rrq_s* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  %27 = load i32, i32* @FC_RXID_ANY, align 4
  %28 = load %struct.fc_rrq_s*, %struct.fc_rrq_s** %8, align 8
  %29 = getelementptr inbounds %struct.fc_rrq_s, %struct.fc_rrq_s* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  ret i32 12
}

declare dso_local i32 @fc_els_req_build(%struct.fchs_s*, i32, i32, i32) #1

declare dso_local i32 @memcpy(%struct.fc_rrq_s*, i32*, i32) #1

declare dso_local i32 @cpu_to_be16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
